create a better UI for the card

--- a/index.html
+++ b/index.html
@@ -30,21 +30,25 @@
     <div class="blob"></div>
 
     <section class="event">
-        <h2>Current Event</h2>
+        <!-- <h2>Current Event</h2> -->
         <div class="event__container">
             <div class="event__container--info">
                 <div class="event__container--info_name">
-                    <h3>Event name:</h3>
-                    <h2>SITARA</h2>
+                    <a href="https://www.instagram.com/hica.huron/" target="_blank"><div class="event__container--info_name-img">
+
+                        <img src="images/HICA-removebg-preview (1).png" alt="hica-instagram">
+                    </div></a>
+                    <div class="event__container--info_name-instagram">
+                        <h5>@hica.huron</h5>
+                        <h3>Huron Indian Cultural Association</h3>
+                    </div>
+                </div>  
+                <div class="event__container--info_id">
+                    <h4>#19830402</h4>
                 </div>
-
-                
             </div>
-            <div class="event__container--img">
-
-                    <!-- <div class="event__container--img-overlay"></div> -->
-                    <img src="images/1665786212385.jpg" alt="">
-
+            <div class="event__container--info_event">
+                
             </div>
         </div>
     </section>
