--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Huron Indian Cultural Association</title>
+    <link rel="icon" href="/images/HICA-removebg-preview (1).png">
 </head>
 <body>
 
@@ -44,11 +45,36 @@
                     </div>
                 </div>  
                 <div class="event__container--info_id">
-                    <h4>#19830402</h4>
+                    <h4>#194349341</h4>
                 </div>
             </div>
             <div class="event__container--info_event">
-                
+                <div class="event__container--info_event-left">
+                    <div class="event__container--info_event-left--name">
+                    <h5 class="event__container--info_event-left-h5">Event name:</h5>
+                    <h2 class="event__container--info_event-left-h2 event__container--info_event-left-h2_first">Annual General Meeting</h2>
+                    </div>
+                    <div class="event__container--info_event-left--venue">
+                        <h5 class="event__container--info_event-left-h5">Venue:</h5>
+                        <h2 class="event__container--info_event-left-h2 event__container--info_event-left-h2_second">The Great Hall</h2>
+                    </div>
+                    <div class="event__container--info_event-left--time">
+                        <h5 class="event__container--info_event-left-h5">Date:</h5>
+                        <h2 class="event__container--info_event-left-h2 event__container--info_event-left-h2_third">5th October 2022 - 4:00PM</h2>
+                    </div>
+                </div>
+
+                <div class="event__container--info_event-right">
+                    <div class="event__container--info_event-right_content">
+                        <p>Join us for our annual general meeting on 5th October 2022 from 4:00pm onwards at the great hall! 
+                            <br>
+                            <br>
+                            You’ll get a chance to meet other members of HICA, play a fun game of bingo with them and try some amazing Indian dishes! Ooooh and don’t forget about the exciting prizes! ✨
+                            <br>
+                            <br>
+                            Hope to see you there!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -58,6 +84,10 @@
     <div class="second-section">
 
     <svg id="wave" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 220" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(250, 112, 112, 1)" offset="0%"></stop><stop stop-color="rgba(255, 209.678, 138.298, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,176L48,165C96,154,192,132,288,132C384,132,480,154,576,154C672,154,768,132,864,106.3C960,81,1056,51,1152,58.7C1248,66,1344,110,1440,106.3C1536,103,1632,51,1728,51.3C1824,51,1920,103,2016,102.7C2112,103,2208,51,2304,33C2400,15,2496,29,2592,47.7C2688,66,2784,88,2880,91.7C2976,95,3072,81,3168,69.7C3264,59,3360,51,3456,44C3552,37,3648,29,3744,55C3840,81,3936,139,4032,161.3C4128,183,4224,169,4320,161.3C4416,154,4512,154,4608,132C4704,110,4800,66,4896,55C4992,44,5088,66,5184,77C5280,88,5376,88,5472,102.7C5568,117,5664,147,5760,154C5856,161,5952,147,6048,135.7C6144,125,6240,117,6336,113.7C6432,110,6528,110,6624,121C6720,132,6816,154,6864,165L6912,176L6912,220L6864,220C6816,220,6720,220,6624,220C6528,220,6432,220,6336,220C6240,220,6144,220,6048,220C5952,220,5856,220,5760,220C5664,220,5568,220,5472,220C5376,220,5280,220,5184,220C5088,220,4992,220,4896,220C4800,220,4704,220,4608,220C4512,220,4416,220,4320,220C4224,220,4128,220,4032,220C3936,220,3840,220,3744,220C3648,220,3552,220,3456,220C3360,220,3264,220,3168,220C3072,220,2976,220,2880,220C2784,220,2688,220,2592,220C2496,220,2400,220,2304,220C2208,220,2112,220,2016,220C1920,220,1824,220,1728,220C1632,220,1536,220,1440,220C1344,220,1248,220,1152,220C1056,220,960,220,864,220C768,220,672,220,576,220C480,220,384,220,288,220C192,220,96,220,48,220L0,220Z"></path></svg>
+
+    <div class="">
+        <h1>Our story</h1>
+    </div>
 
     </div>
 </body>
