--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         
                 </div>
 
-                <div class="third-section_upcoming-events-card">
+                <!-- <div class="third-section_upcoming-events-card">
                     <div class="third-section_upcoming-events-card--info">
                             <div class="third-section_upcoming-events-card--info_name">
                                 <a href="https://www.instagram.com/hica.huron/" target="_blank">
@@ -308,7 +308,7 @@
                         </div>
                     </div>
                         
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -467,7 +467,36 @@
             </div>
         </div>
 
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#434343" fill-opacity="1" d="M0,192L60,208C120,224,240,256,360,256C480,256,600,224,720,192C840,160,960,128,1080,122.7C1200,117,1320,139,1380,149.3L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+
     </div>
+
+
+    <footer class="footer">
+
+        <div class="footer_con">
+            <div class="footer_con--left">
+                <div class="footer_con--left-logo">
+                    HICA
+                </div>
+                <div class="footer_con--left-copyright">
+                    © 2022-present Huron Indian Cultural Association . All Rights Reserved.
+                </div>
+            </div>
+
+            <div class="footer_con--right">
+                <h4>Links</h4>
+
+                <a href="https://www.instagram.com/hica.huron/" target="_blank">Instagram</a>
+                <a href="https://www.myhuron.ca/huron-indian-cultural-association" target="_blank">Huron</a>
+                <a href="https://www.facebook.com/HICAHuron" target="_blank">Facebook</a>
+
+
+
+            </div>
+
+        </div>
+    </footer>
 
 </body>
 </html>
