add scrollIntoView links in js

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <img src="images/HICA-removebg-preview (1).png" alt="">
             </div>
             <div class="nav__links">
-                <a href="#" class="nav__links--l">Home</a>
-                <a href="#" class="nav__links--l">About</a>
-                <a href="#" class="nav__links--l nav__links--events">Events</a>
+                <a class="nav__links--l home">Home</a>
+                <a class="nav__links--l about">About</a>
+                <a class="nav__links--l nav__links--events events">Events</a>
             </div>
 
             <div class="nav__button">
@@ -498,6 +498,8 @@
         </div>
     </footer>
 
+
+    <script src="/script.js"></script>
 </body>
 </html>
 
