add observing animations

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             
 
-            <p>The Huron Indian Cultural Association <span class="vibrant"> (HICA) </span> was founded in 2018 to celebrate, enjoy, and share Indian culture with the Huron community.
+            <p class="story-p">The Huron Indian Cultural Association <span class="vibrant"> (HICA) </span> was founded in 2018 to celebrate, enjoy, and share Indian culture with the Huron community.
                 <br>
                 <br>
                 At HICA, our goal is to support Indian students by creating a tight-knit Indian community. Moreover, we want to create a large family at Huron, which promotes diversity and individuality.
