fix img in title-bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Huron Indian Cultural Association</title>
-    <link rel="icon" href="/images/hica.webp" type="image/gif/png">
+    <link rel="icon" href="/images/hica.webp" type="image/gif/png" class="title-img">
 </head>
 <body>
 
